# chess

./: .gitignore  AGENTS.md  eval_two_step_separate.py  pyproject.toml  record.md  sample_fixed_positions.py
results/llama3.2_1b_three_step_sep_10_seed20260226/: llama3.2_1b_three_step_sep_10_seed20260226.fen_to_legal_moves.jsonl  llama3.2_1b_three_step_sep_10_seed20260226.fen_to_legal_moves.summary.json  llama3.2_1b_three_step_sep_10_seed20260226.history_to_fen.jsonl  llama3.2_1b_three_step_sep_10_seed20260226.history_to_fen.summary.json  llama3.2_1b_three_step_sep_10_seed20260226.history_to_legal_moves.jsonl  llama3.2_1b_three_step_sep_10_seed20260226.history_to_legal_moves.summary.json
